[package]
name = "process_peeker"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/forbjok/process_peeker.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.59"
byteorder = "1.4.3"
hex = "0.4.3"
sysinfo = "0.25.1"
sha2 = "0.10.2"
tracing = "0.1.36"
winapi = "0.3.9"

[dev-dependencies]
once_cell = "1.13.0"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
